* Improved handling of large EEPROM contents.
* Renamed ec_master module parameters main and backup to main_devices and
  backup_devices to avoid warnings of some compilers.
* List end evaluate CoE detail flags from general category, list
  'Flags' from general category in slave info file.
* Added MODPROBE_FLAGS variable in start script and sysconfig file.
* Implemented missing datagram types.

-------------------------------------------------------------------------------

Changes in version 1.3.2:

* New feature: Read dynamic PDO mapping from SDO dictionary.
* Implemented SII writing workaround for some broken slaves.
* Improved handling for spontaneous AL state changes.
* Master takes mailbox sync manager configurations from EEPROM words
  0x0018-0x001b, if no sync manager configurations are provided.
* Calculate checksum when writing EEPROM or alias address.
* Fixed source MAC address setting bug.
* Removed config.kbuild and replaced Kbuild files by Kbuild.in files.

-------------------------------------------------------------------------------

Changes in version 1.3.1:

* Improved EoE handling: Avoided skipping of datagrams and release lock
  while processing.
* Added some statistics to the datagram structure.
* Master state machine clears all station addresses with a broadcast datagram
  before setting them.
* Added --enable-eoe conditional.
* Minor extensions of the master info file.
* Improved handling of unexpected working counters.
* Create network interfaces for EoE devices with alias as eoeXaY.
* Fixed problems on big-endian systems.
* Added documentation on how to set up an EoE network.

-------------------------------------------------------------------------------

Changes in version 1.3.0:

* Added Intel PRO/1000 Gigabit Ethernet driver (e1000).
* Added testing version of Intel PRO/100 Ethernet driver (e100).
* Added testing version of NVIDIA nForce Ethernet driver (forcedeth).