@@ -63,6 +63,7 @@ Changes in version 1.4.0:
   'Flags' from general category in slave info file.
 * Added MODPROBE_FLAGS variable in start script and sysconfig file.
 * Implemented missing datagram types.
+* Allow multiple sync manager categories in SII.
 
 -------------------------------------------------------------------------------
 
